
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1690] Fixed text for confirmation dialog when removing an Element to include name and type of Element
- [#MODX-1707] Added mail_charset and mail_encoding system settings to control charset and encoding in emails
- [#MODX-1706] Ensure that text and qtip fields in Resource/Element trees have any tags stripped
- [#MODX-1699] Fixed bug in Quick Edit TV where it would erase the caption and replace it with the name
- [#MODX-1704] Fixed erroneous if statement in clear button hiding in error log panel
- [#MODX-1675] Added fix for windows paths on Edit File panel
- [#MODX-1681] Added checks for issue with importing lexicon in Webkit-based browsers
- Cleanups to TV input widths
- Removing core RTE; too much work, may take back up in a later version
- [#MODX-1697] Added ability to edit images and links in RTE
- Added more robust MODx.rte.Selection API
- Added missing changes to modActions needed to load lexicon entries for RTE
- [#MODX-1662] Fixed mismatch in menus widget field label
- [#MODX-1687] Fixed bugs in template package browser due to changes in modx.view.js
- Made resource panel be a fileUpload-able panel for plugins
- [#MODX-1357] Added richtext_default system setting 
- [#MODX-1685] Added MODxEditor, a core Ext-based RTE to be the default RTE for Revolution
- [#MODX-1674] Stabilized MODx.Browser to work with core RTE
- - Added missing registry.db.modDbRegister* classes to setup
- [#MODX-1642] Logging out doesn't unlock resources: added modUser::removeLocks() and modified modUser::endSession() to call this method
- Added OnInitCulture event to core transport data.
- [#MODX-1672] Refactor collation/connection processors in setup to be more stable